# pico-pi-testing

./: CMakeLists.txt  lcd.h  mine.c  mine.h  sun.c  sun.h  test.c
